N+1 bulk delete, EventLogger batching, ProviderRegistry lock-free IO + deterministic order (v0.6.5)
- AgentService.delete: replace per-entity Message/Conversation loops with
  bulk JPQL DELETE + em.clear(), reducing 5000+ statements to 6 queries
- EventLogger: write-behind queue with batch flush (BATCH_SIZE=20),
  eliminating 90-120 individual transactions per agent tool loop
- ProviderRegistry.refresh: move DB read outside refreshLock so concurrent
  get() calls are not blocked; use LinkedHashMap for deterministic
  getPrimary()/getSecondary() ordering across JVM runs
- AgentRunner: flush EventLogger at end of run/runStreaming finally blocks

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>